--- a/web/templates/post/index.html.eex
+++ b/web/templates/post/index.html.eex
@@ -1,1 +1,12 @@
-<h1>Posts</h1>
+<h2>Posts</h2>
+
+<div class="entries">
+<%= for post <- @posts do %>
+  <div class="entry">
+    <h3><%= link post.title, to: post_path(@conn, :show, post) %></h3>
+    <p><%= post.published_at %></p>
+    <p><%= {:safe, post.content} %></p>
+  </div>
+<% end %>
+</div>
+
