--- a/web/templates/post/show.html.eex
+++ b/web/templates/post/show.html.eex
@@ -1,1 +1,5 @@
-<h1><%= @slug %></h1>
+<div class="entry">
+  <h2><%= @post.title %></h2>
+  <p><%= @post.published_at %></p>
+  <p><%= @post.content %></p>
+</div>
