--- a/web/templates/admin/admin/index.html.eex
+++ b/web/templates/admin/admin/index.html.eex
@@ -1,3 +1,4 @@
 <ul>
   <li><%= link 'Posts', to: admin_post_path(@conn, :index) %></li>
+  <li><%= link 'Users', to: admin_user_path(@conn, :index) %></li>
 </ul>
