--- a/web/templates/admin/user/form.html.eex
+++ b/web/templates/admin/user/form.html.eex
@@ -16,8 +16,8 @@
   </div>
 
   <div class="form-group">
-    <%= label f, :password_hash, "Password hash", class: "control-label" %>
-    <%= text_input f, :password_hash, class: "form-control" %>
+    <%= label f, :password, "Password", class: "control-label" %>
+    <%= password_input f, :password, class: "form-control" %>
   </div>
 
   <div class="form-group">
