--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -8,6 +8,7 @@
     <meta name="author" content="">
 
     <title>Phoenix Entries</title>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/styles/default.min.css">
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
@@ -31,6 +32,9 @@
             <% end %>
       </p>
     </div> <!-- /container -->
+
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/highlight.min.js"></script>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
