--- a/web/templates/post/show.html.eex
+++ b/web/templates/post/show.html.eex
@@ -1,5 +1,5 @@
 <div class="entry">
   <h2><%= @post.title %></h2>
   <p><%= @post.published_at %></p>
-  <p><%= @post.content %></p>
+  <p><%= html_content(@post.content) %></p>
 </div>
