--- a/web/templates/admin/post/form.html.eex
+++ b/web/templates/admin/post/form.html.eex
@@ -26,6 +26,11 @@
   </div>
 
   <div class="form-group">
+    <%= label f, :publish, "Publish", class: "control-label" %>
+    <%= checkbox f, :publish, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
     <%= submit "Submit", class: "btn btn-primary" %>
   </div>
 <% end %>
